<resources>
    <string name="app_name">My Trips</string>
    <string name="trip_details">Trip Detail</string>
    <string name="passenger_label">PASSENGER</string>
    <string name="passenger_name">MR. MOHAN KARATS</string>
    <string name="origin_code">BLR</string>
    <string name="destination_code">CJB</string>
    <string name="flight_code">9F 2465</string>
    <string name="boarding_time_label">BOARDING TIME</string>
    <string name="boarding_time">02:10 PM</string>
    <string name="departure_time_label">DEPARTURE</string>
    <string name="departure_time">02:40 PM</string>
    <string name="arrival_time">03:10 PM</string>
    <string name="arrival_time_label">ARRIVAL</string>
    <string name="boarding_in_time">00:15</string>
    <string name="boarding_in_label">BOARDING IN</string>
    <string name="terminal_label">TERMINAL</string>
    <string name="gate_label">GATE</string>
    <string name="seat_label">SEAT</string>
    <string name="terminal">1</string>
    <string name="gate">6A</string>
    <string name="seat">01A</string>
    <string name="depature_date">DEPARTURE DATE</string>
    <string name="depature_date_value">2018 Jan 15</string>
    <string name="i18n_depature_airport_code">Depature Airport Code</string>
    <string name="i18n_arrival_airport_code">Arrival Airport Code</string>
    <string name="i18n_to">To Airport</string>
    <string name="flight_name">FLIGHT</string>
    <string name="pnr_label">PNR</string>
    <string name="pnr_value">Z1Y2X3</string>

</resources>
