<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_passengerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/passenger_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:hint="@string/passenger_label"/>

    <TextView
        android:id="@+id/tv_passengerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passenger_name"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_passengerLabel"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_passengerLabel"
        android:textAppearance="@style/TextAppearance.AppCompat"/>

    <TextView
        android:id="@+id/tv_pnrLablel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pnr_label"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_passengerName"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_passengerName"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

    <TextView
        android:id="@+id/tv_pnrValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        tools:text="@string/pnr_value"
        app:layout_constraintLeft_toLeftOf="@+id/tv_pnrLablel"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_pnrLablel"
        android:textAppearance="@style/TextAppearance.AppCompat"/>

    <TextView
        android:id="@+id/tv_departureTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        tools:text="@string/departure_time"
        app:layout_constraintLeft_toLeftOf="@+id/tv_pnrValue"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_pnrValue" />

    <TextView
        android:id="@+id/tv_arrivalTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        tools:text="@string/arrival_time"
        app:layout_constraintLeft_toLeftOf="@+id/tv_departureTime"
        android:layout_marginTop="128dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_departureTime" />

    <ImageView
        android:id="@+id/iv_departureCity"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:srcCompat="@drawable/shape_rectangle_stroke"
        app:layout_constraintLeft_toRightOf="@+id/tv_departureTime"

        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_pnrValue" />

    <ImageView
        android:id="@+id/iv_arrivalCity"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/shape_rectangle_stroke"

        app:layout_constraintLeft_toRightOf="@+id/tv_arrivalTime"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_departureCity" />

    <TextView
        android:id="@+id/tv_departureAirport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/origin_code"
        app:layout_constraintTop_toTopOf="@+id/iv_departureCity"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/iv_departureCity"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/tv_arrivalAirport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destination_code"
        app:layout_constraintTop_toTopOf="@+id/iv_arrivalCity"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/iv_arrivalCity"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorPrimaryDark"/>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/sym_action_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        />

    <ImageView
        android:id="@+id/iv_planeTakeoff"
        android:layout_width="48dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/ic_plan_takeoff"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="@+id/iv_departureCity"
        app:layout_constraintTop_toTopOf="@+id/tv_departureAirport"
        android:layout_marginTop="32dp" />

    <ImageView
        android:id="@+id/iv_planeLanding"
        android:layout_width="48dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/ic_plan_landing"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="@+id/iv_arrivalCity"
        app:layout_constraintTop_toTopOf="@+id/tv_arrivalAirport"
        android:layout_marginTop="32dp" />


</android.support.constraint.ConstraintLayout>